# py2cpp-accelerator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  system_info.py
examples/: pi_approximation.py
samples/: pi_approximation.py
