[project]
name = "py2cpp-accelerator"
version = "0.1.0"
description = "Convert Python code to optimized C++ using LLMs for massive performance gains"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
